--- a/definitions/devbox-nodejs/ks.cfg
+++ b/definitions/devbox-nodejs/ks.cfg
@@ -1,39 +1,123 @@
+# Config
 install
-url --url=http://mirror.nextlayer.at/centos/7.0.1406/os/x86_64/
-lang en_US.UTF-8
-keyboard us
-network --bootproto=dhcp
+autostep
+cmdline
+text
+skipx
+reboot
+url --url=http://mirrors.163.com/centos/7/os/x86_64/
+
+# Auth
 rootpw --iscrypted $1$damlkd,f$UC/u5pUts5QiU3ow.CSso/
 firewall --enabled --service=ssh
 authconfig --enableshadow --passalgo=sha512
+auth  --useshadow  --enablemd5
 selinux --disabled
+
+# Regional settings
+lang en_US.UTF-8
+keyboard us
 timezone UTC
-bootloader --location=mbr
 
-text
-skipx
+# Network
+network --bootproto=dhcp
+
+# Partition
+bootloader --location=mbr --driveorder=sda --append="net.ifnames=0 biosdevname=0"
 zerombr
-
 clearpart --all --initlabel
 autopart
 
-auth  --useshadow  --enablemd5
+# First booting
 firstboot --disabled
+logging --level=info
 reboot
+
 
 %packages --nobase
 @core
+wget
+nano
+git
+audit
+dos2unix
+sgpio
+sendmail
+yum-presto
+yum-utils
+libselinux-python
+bridge-utils
+cpufrequtils
+ncurses-term
+star
+-NetworkManager
+-postfix
+-b43-fwcutter
+-eject
+-fprintd
+-fprintd-pam
+-kexec-tools
+-plymouth
+-rfkill
+-systemtap-runtime
+-tcsh
+-mksh
+-wireless-tools
+-abrt-cli
+-abrt-addon-kerneloops
+-abrt-addon-ccpp
+-abrt-addon-python
+-iwl5150-firmware
+-atmel-firmware
+-iwl6000-firmware
+-ipw2200-firmware
+-rt73usb-firmware
+-iwl6000g2a-firmware
+-ipw2100-firmware
+-iwl1000-firmware
+-ivtv-firmware
+-iwl3945-firmware
+-iwl6050-firmware
+-libertas-usb8388-firmware
+-iwl5000-firmware
+-iwl4965-firmware
+-zd1211-firmware
+-iwl100-firmware
+-ql2400-firmware
+-ql2100-firmware
+-ql2500-firmware
+-rt61pci-firmware
+-ql2200-firmware
+-bfa-firmware
+-aic94xx-firmware
+-iwl100-firmware
+-ql23xx-firmware
+-iw
+-xorg-x11-drv-ati-firmware
+-zd1211-firmware
+-system-config-firewall-base
+-iscsi-initiator-utils
 bzip2
 openssh-clients
 openssh-server
+sudo
 %end
 
-%post
-/usr/bin/yum -y install sudo
+%post --log=/root/post-ks-log
+rm -rf /etc/udev/rules.d/70-persistent-net.rules
 /usr/sbin/groupadd veewee
 /usr/sbin/useradd veewee -g veewee -G wheel
 echo "veewee"|passwd --stdin veewee
 echo "veewee        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/veewee
 chmod 0440 /etc/sudoers.d/veewee
+#
+/usr/sbin/userdel shutdown
+/usr/sbin/userdel halt
+/usr/sbin/userdel games
+/usr/sbin/userdel operator
+/usr/sbin/userdel ftp
+/usr/sbin/userdel gopher
+#
+
 %end
 
