--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -1,18 +1,19 @@
 # Config
 install
+url --url=http://mirrors.cat.pdx.edu/centos/7/os/x86_64/
 autostep
 cmdline
 text
 skipx
 reboot
-url --url=http://mirrors.ustc.edu.cn/centos/7/os/x86_64/
 
 # Auth
-rootpw --iscrypted vagrant
-firewall --enabled --service=ssh
+rootpw --plaintext vagrant
+user --name=vagrant --password=vagrant --plaintext --uid=900
+firewall --disabled
+selinux --disabled
 authconfig --enableshadow --passalgo=sha512
 auth --useshadow  --enablemd5
-selinux --permissive
 
 # Regional settings
 lang en_US.UTF-8
@@ -39,90 +40,19 @@ reboot
 @Base
 @Core
 @Development Tools
+sudo
 kernel-headers
 kernel-devel
-sudo
 openssh-clients
 openssl-devel
 readline-devel
 zlib-devel
-net-tools
-telnet
-iftop
-mtr
-wget
-
-# unnecessary firmware
--NetworkManager
--postfix
--b43-fwcutter
--eject
--fprintd
--fprintd-pam
--kexec-tools
--plymouth
--rfkill
--systemtap-runtime
--tcsh
--mksh
--wireless-tools
--abrt-cli
--abrt-addon-kerneloops
--abrt-addon-ccpp
--abrt-addon-python
--iwl5150-firmware
--atmel-firmware
--iwl6000-firmware
--ipw2200-firmware
--rt73usb-firmware
--iwl6000g2a-firmware
--ipw2100-firmware
--iwl1000-firmware
--ivtv-firmware
--iwl3945-firmware
--iwl6050-firmware
--libertas-usb8388-firmware
--iwl5000-firmware
--iwl4965-firmware
--zd1211-firmware
--iwl100-firmware
--ql2400-firmware
--ql2100-firmware
--ql2500-firmware
--rt61pci-firmware
--ql2200-firmware
--bfa-firmware
--aic94xx-firmware
--iwl100-firmware
--ql23xx-firmware
--iw
--xorg-x11-drv-ati-firmware
--zd1211-firmware
--system-config-firewall-base
--iscsi-initiator-utils
 %end
 
 
 # Post scripts
 %post
-chkconfig acpid off
-chkconfig auditd off
-chkconfig blk-availability off
-chkconfig bluetooth off
-chkconfig certmonger off
-chkconfig cpuspeed off
-chkconfig cups off
-chkconfig haldaemon off
-chkconfig ip6tables off
-chkconfig lvm2-monitor off
-chkconfig messagebus off
-chkconfig mdmonitor off
-chkconfig rpcbind off
-chkconfig rpcgssd off
-chkconfig rpcidmapd off
-chkconfig yum-updateonboot off
-
-chkconfig sshd
-
-yum clean all
+echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+chmod 0440 /etc/sudoers.d/vagrant
+sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
 %end
