* Update install sources and kickstart script.

--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -1,6 +1,6 @@
 # Config
 install
-url --url=http://mirrors.kernel.org/centos/7/os/x86_64/
+url --url=https://mirrors.ustc.edu.cn/centos/7/os/x86_64/
 autostep
 cmdline
 text
@@ -10,7 +10,7 @@ unsupported_hardware
 
 # Auth
 rootpw --plaintext vagrant
-user --name=vagrant --password=vagrant --plaintext --uid=900
+user --name=vagrant --password=vagrant --plaintext --uid=900 --groups=vagrant,wheel
 firewall --disabled
 selinux --permissive
 authconfig --enableshadow --passalgo=sha512
@@ -48,6 +48,10 @@ openssh-clients
 openssl-devel
 readline-devel
 zlib-devel
+net-tools
+vim
+wget
+curl
 
 # unnecessary firmware
 -aic94xx-firmware
