--- a/packer/http/ks.cfg
+++ b/packer/http/ks.cfg
@@ -12,7 +12,7 @@ unsupported_hardware
 rootpw --plaintext vagrant
 user --name=vagrant --password=vagrant --plaintext --uid=900 --groups=vagrant,wheel
 firewall --disabled
-selinux --permissive
+selinux --disabled
 authconfig --enableshadow --passalgo=sha512
 auth --useshadow  --enablemd5
 
