--- a/vmlord/http/ks.cfg
+++ b/vmlord/http/ks.cfg
@@ -12,7 +12,7 @@ unsupported_hardware
 ## Empty password
 rootpw --iscrypted saFLGt/QKS6yw
 firewall --disabled
-selinux --disabled
+selinux --permissive
 authconfig --enableshadow --passalgo=sha512
 auth --useshadow --enablemd5
 
