--- a/devenv/http/ks.cfg
+++ b/devenv/http/ks.cfg
@@ -12,7 +12,7 @@ unsupported_hardware
 rootpw --plaintext vagrant
 user --name=vagrant --password=vagrant --plaintext --uid=900 --groups=vagrant,wheel
 firewall --disabled
-selinux --disabled
+selinux --permissive
 authconfig --enableshadow --passalgo=sha512
 auth --useshadow  --enablemd5
 
@@ -49,9 +49,6 @@ openssl-devel
 readline-devel
 zlib-devel
 net-tools
-vim
-wget
-curl
 
 # unnecessary firmware
 -aic94xx-firmware
