--- a/vmlord/http/ks.cfg
+++ b/vmlord/http/ks.cfg
@@ -40,7 +40,15 @@ reboot
 %packages --ignoremissing --excludedocs
 @Base
 @Core
+@Development Tools
 sudo
+kernel-headers
+kernel-devel
+openssh-clients
+openssl-devel
+readline-devel
+zlib-devel
+net-tools
 
 # unnecessary firmware
 -aic94xx-firmware
