* Extract common and local variables.

--- a/vmlord/Makefile
+++ b/vmlord/Makefile
@@ -2,9 +2,9 @@
 BASE_NAME=centos-7-vmlord
 
 build:
-	packer build $(BASE_NAME).json
+	packer build -var-file=../variables-common.json -var-file=../variables-local.json ../$(BASE_NAME).json
 
 push:
-	packer push -var-file=variables.json $(BASE_NAME).json
+	packer push -var-file=../variables-common.json $(BASE_NAME).json
 
 .PHONY: build push
