--- a/devenv/Makefile
+++ b/devenv/Makefile
@@ -1,10 +1,10 @@
 # Build for Packer
-BASE_NAME=centos-7-vmlord
+BASE_NAME=centos-7-devenv
 
 build:
-	packer build $(BASE_NAME).json
+	packer build -var-file=../variables-common.json -var-file=../variables-local.json ../$(BASE_NAME).json
 
 push:
-	packer push -var-file=variables.json $(BASE_NAME).json
+	packer push -var-file=../variables-common.json $(BASE_NAME).json
 
 .PHONY: build push
