* DRY for scripts and kickstart file.

--- a/boxes/centos-7-devenv/ks.cfg
+++ b/boxes/centos-7-devenv/ks.cfg
@@ -1,6 +1,6 @@
 # Config
 install
-url --url=https://mirrors.ustc.edu.cn/centos/7/os/x86_64/
+url --url=%{source_url}
 autostep
 cmdline
 text
@@ -9,8 +9,8 @@ reboot
 unsupported_hardware
 
 # Auth
-## Empty password
-rootpw --iscrypted saFLGt/QKS6yw
+rootpw --plaintext vagrant
+user --name=vagrant --password=vagrant --plaintext --uid=900 --groups=vagrant,wheel
 firewall --disabled
 selinux --permissive
 authconfig --enableshadow --passalgo=sha512
@@ -37,7 +37,7 @@ reboot
 
 
 # Packages
-%packages --ignoremissing --excludedocs
+%%packages --ignoremissing --excludedocs
 @Base
 @Core
 @Development Tools
@@ -86,12 +86,12 @@ net-tools
 -rt73usb-firmware
 -xorg-x11-drv-ati-firmware
 -zd1211-firmware
-%end
+%%end
 
 
 # Post scripts
-%post
+%%post
+echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+chmod 0440 /etc/sudoers.d/vagrant
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
-sudo echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
-sudo echo "PermitEmptyPasswords yes" >> /etc/ssh/sshd_config
-%end
+%%end
