--- a/config.yml
+++ b/config.yml
@@ -8,12 +8,14 @@ variables:
     "build_location": "local",
     "iso_url": "https://mirrors.ustc.edu.cn/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-1503-01.iso",
     "iso_checksum": "d07ab3e615c66a8b2e9a50f4852e6a77",
-    "iso_checksum_type": "md5"
+    "iso_checksum_type": "md5",
+    "source_url": "https://mirrors.ustc.edu.cn/centos/7/os/x86_64/"
   }
   remote: {
     "headless": "true",
     "build_location": "remote",
     "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-1503-01.iso",
     "iso_checksum": "d07ab3e615c66a8b2e9a50f4852e6a77",
-    "iso_checksum_type": "md5"
+    "iso_checksum_type": "md5",
+    "source_url": "http://mirrors.cat.pdx.edu/centos/7/os/x86_64/"
   }
