--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,15 @@ version: "2.0.0"
 default_target: "generic"
 atlas_user: "zealic"
 
+aws:
+  global:
+    region: "ap-northeast-1"
+    s3bucket: "hrmes-ami"
+  china:
+    region: "cn-north-1"
+    s3endpoint: "https://s3.cn-north-1.amazonaws.com.cn"
+    s3bucket: "hrmes-ami"
+
 variables:
   local: {
     "headless": "false",
