* Improve template and ks define.

--- a/boxes/centos-7-generic/ks.cfg
+++ b/boxes/centos-7-generic/ks.cfg
@@ -10,9 +10,9 @@ unsupported_hardware
 
 # Auth
 ## Empty password
-rootpw --iscrypted saFLGt/QKS6yw
+rootpw --plaintext root
 firewall --disabled
-selinux --permissive
+selinux --disabled
 authconfig --enableshadow --passalgo=sha512
 auth --useshadow --enablemd5
 
@@ -27,8 +27,7 @@ network --bootproto=dhcp
 # Partition
 bootloader --location=mbr --driveorder=sda --append="net.ifnames=0 biosdevname=0"
 zerombr
-clearpart --all --initlabel
-autopart
+part / --fstype=xfs --grow --size=1024
 
 # First booting
 firstboot --disabled
