--- a/boxes/centos-7-devenv/ks.cfg
+++ b/boxes/centos-7-devenv/ks.cfg
@@ -12,7 +12,7 @@ unsupported_hardware
 rootpw --plaintext vagrant
 user --name=vagrant --password=vagrant --plaintext --uid=900 --groups=vagrant,wheel
 firewall --disabled
-selinux --permissive
+selinux --disabled
 authconfig --enableshadow --passalgo=sha512
 auth --useshadow --enablemd5
 
@@ -27,8 +27,7 @@ network --bootproto=dhcp
 # Partition
 bootloader --location=mbr --driveorder=sda --append="net.ifnames=0 biosdevname=0"
 zerombr
-clearpart --all --initlabel
-autopart
+part / --fstype=xfs --grow --size=1024
 
 # First booting
 firstboot --disabled
