--- a/config.yml
+++ b/config.yml
@@ -1,22 +1,61 @@
 # Build Configuration
 version: "2.0.0"
-default_target: "generic"
 atlas_user: "zealic"
+defaults:
+  build_format: ""
+  manifest    : "debian-8-devenv"
+  provider    : "virtualbox"
 
-variables:
-  _: {
-    "headless": "false",
-    "build_location": "local",
-    "iso_url": "https://mirrors.ustc.edu.cn/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-1503-01.iso",
-    "iso_checksum": "d07ab3e615c66a8b2e9a50f4852e6a77",
-    "iso_checksum_type": "md5",
-    "source_url": "https://mirrors.ustc.edu.cn/centos/7/os/x86_64/"
-  }
-  push: {
-    "headless": "true",
-    "build_location": "remote",
-    "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-1503-01.iso",
-    "iso_checksum": "d07ab3e615c66a8b2e9a50f4852e6a77",
-    "iso_checksum_type": "md5",
-    "source_url": "http://mirrors.cat.pdx.edu/centos/7/os/x86_64/"
-  }
+
+manifests:
+  centos-7-generic:
+    _: {
+      "headless": "false",
+      "build_location": "local",
+      "iso_url": "https://mirrors.ustc.edu.cn/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
+      "iso_checksum": "111379a06402e1e445c6aeee9401d031",
+      "iso_checksum_type": "md5",
+      "source_url": "https://mirrors.ustc.edu.cn/centos/7/os/x86_64/"
+    }
+    push: {
+      "headless": "true",
+      "build_location": "remote",
+      "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
+      "iso_checksum": "111379a06402e1e445c6aeee9401d031",
+      "iso_checksum_type": "md5",
+      "source_url": "http://mirrors.cat.pdx.edu/centos/7/os/x86_64/"
+    }
+  centos-7-devenv:
+    _: {
+      "headless": "false",
+      "build_location": "local",
+      "iso_url": "https://mirrors.ustc.edu.cn/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
+      "iso_checksum": "111379a06402e1e445c6aeee9401d031",
+      "iso_checksum_type": "md5",
+      "source_url": "https://mirrors.ustc.edu.cn/centos/7/os/x86_64/"
+    }
+    push: {
+      "headless": "true",
+      "build_location": "remote",
+      "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
+      "iso_checksum": "111379a06402e1e445c6aeee9401d031",
+      "iso_checksum_type": "md5",
+      "source_url": "http://mirrors.cat.pdx.edu/centos/7/os/x86_64/"
+    }
+  debian-8-devenv:
+    _: {
+      "headless": "false",
+      "build_location": "local",
+      "iso_url": "http://mirrors.ustc.edu.cn/debian-cd/8.2.0/amd64/iso-cd/debian-8.2.0-amd64-netinst.iso",
+      "iso_checksum": "762eb3dfc22f85faf659001ebf270b4f",
+      "iso_checksum_type": "md5",
+      "source_url": "mirrors.ustc.edu.cn"
+    }
+    push: {
+      "headless": "true",
+      "build_location": "remote",
+      "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-1503-01.iso",
+      "iso_checksum": "762eb3dfc22f85faf659001ebf270b4f",
+      "iso_checksum_type": "md5",
+      "source_url": "ftp.debian.org"
+    }
