* Normalize builder user.

--- a/boxes/centos-7-devenv/ks.cfg
+++ b/boxes/centos-7-devenv/ks.cfg
@@ -9,8 +9,7 @@ reboot
 unsupported_hardware
 
 # Auth
-rootpw --plaintext vagrant
-user --name=vagrant --password=vagrant --plaintext --uid=900 --groups=vagrant,wheel
+rootpw --plaintext %{ssh_password}
 firewall --disabled
 selinux --disabled
 authconfig --enableshadow --passalgo=sha512
