--- a/boxes/centos-7-generic/ks.cfg
+++ b/boxes/centos-7-generic/ks.cfg
@@ -10,7 +10,7 @@ unsupported_hardware
 
 # Auth
 ## Empty password
-rootpw --iscrypted saFLGt/QKS6yw
+rootpw --plaintext %{ssh_password}
 firewall --disabled
 selinux --disabled
 authconfig --enableshadow --passalgo=sha512
