--- a/boxes/debian-8-devenv/ks.cfg
+++ b/boxes/debian-8-devenv/ks.cfg
@@ -2,18 +2,21 @@ d-i debian-installer/locale select en_US.UTF-8
 d-i localechooser/preferred-locale select en_US.UTF-8
 d-i keyboard-configuration/xkb-keymap select us
 
+
 d-i netcfg/choose_interface select auto
+
 
 d-i mirror/country string manual
 d-i mirror/http/hostname string %{source_url}
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
-
 d-i mirror/suite string jessie
+
 
 d-i clock-setup/utc boolean true
 d-i time/zone string UTC
 d-i clock-setup/ntp boolean false
+
 
 d-i partman-auto/method string regular
 d-i partman-lvm/device_remove_lvm boolean true
@@ -27,17 +30,16 @@ d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
-d-i passwd/root-password password vagrant
-d-i passwd/root-password-again password vagrant
 
-d-i passwd/user-fullname string Vagrant User
-d-i passwd/username string vagrant
-d-i passwd/user-password password vagrant
-d-i passwd/user-password-again password vagrant
-
+# User Setup
+d-i passwd/make-user boolean false
+d-i passwd/root-password password %{ssh_password}
+d-i passwd/root-password-again password %{ssh_password}
+d-i user-setup/allow-password-weak boolean true
 # The user account will be added to some standard initial groups. To
 # override that, use this.
 d-i passwd/user-default-groups string audio cdrom video sudo adm
+
 
 d-i apt-setup/non-free boolean true
 d-i apt-setup/contrib boolean true
@@ -45,13 +47,19 @@ d-i apt-setup/services-select multiselect security
 d-i apt-setup/security_host string %{source_url}/debian-security
 
 tasksel tasksel/first multiselect standard
-d-i pkgsel/include string openssh-server sudo ntpdate ntp vim
 popularity-contest popularity-contest/participate boolean false
+d-i pkgsel/include string \
+  sudo openssh-server ntpdate ntp vim \
+  cloud-init
+
 
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
 d-i grub-installer/bootdev string /dev/sda
 d-i finish-install/reboot_in_progress note
 
+
 d-i preseed/late_command string \
-  in-target sed -i 's/^%%sudo.*/%%sudo ALL=(ALL:ALL) NOPASSWD:ALL/g' /etc/sudoers
+  echo 'Defaults:%{ssh_username} !requiretty' > /target/etc/sudoers.d/%{ssh_username}; \
+  echo '%{ssh_username} ALL=(ALL) NOPASSWD: ALL' >> /target/etc/sudoers.d/%{ssh_username}; \
+  chmod 440 /target/etc/sudoers.d/%{ssh_username}
