--- a/boxes/debian-8-devenv/ks.cfg
+++ b/boxes/debian-8-devenv/ks.cfg
@@ -49,8 +49,7 @@ d-i apt-setup/security_host string %{source_url}/debian-security
 tasksel tasksel/first multiselect standard
 popularity-contest popularity-contest/participate boolean false
 d-i pkgsel/include string \
-  sudo openssh-server ntpdate ntp vim \
-  cloud-init
+  sudo openssh-server ntpdate ntp vim
 
 
 d-i grub-installer/only_debian boolean true
@@ -60,6 +59,4 @@ d-i finish-install/reboot_in_progress note
 
 
 d-i preseed/late_command string \
-  echo 'Defaults:%{ssh_username} !requiretty' > /target/etc/sudoers.d/%{ssh_username}; \
-  echo '%{ssh_username} ALL=(ALL) NOPASSWD: ALL' >> /target/etc/sudoers.d/%{ssh_username}; \
-  chmod 440 /target/etc/sudoers.d/%{ssh_username}
+  sed -i -r 's/^#?(PermitRootLogin|PasswordAuthentication) .+/\1 yes/' /target/etc/ssh/sshd_config
