--- a/config.yml
+++ b/config.yml
@@ -48,8 +48,8 @@ manifests:
     }
     push: {
       "headless": "true",
-      "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-1503-01.iso",
+      "iso_url": "http://mirrors.kernel.org/debian-cd/8.2.0/amd64/iso-cd/debian-8.2.0-amd64-netinst.iso",
       "iso_checksum": "762eb3dfc22f85faf659001ebf270b4f",
       "iso_checksum_type": "md5",
-      "source_url": "ftp.debian.org"
+      "source_url": "ftp.hosteurope.de/mirror/ftp.debian.org"
     }
