--- a/manifests/debian-8-devenv/ks.cfg
+++ b/manifests/debian-8-devenv/ks.cfg
@@ -44,7 +44,7 @@ d-i passwd/user-default-groups string audio cdrom video sudo adm
 d-i apt-setup/non-free boolean true
 d-i apt-setup/contrib boolean true
 d-i apt-setup/services-select multiselect security
-d-i apt-setup/security_host string %{source_url}/debian-security
+d-i apt-setup/security_host string %{security_source_url}
 
 tasksel tasksel/first multiselect standard
 popularity-contest popularity-contest/participate boolean false
