--- a/manifests/debian-8-devenv/ks.cfg
+++ b/manifests/debian-8-devenv/ks.cfg
@@ -7,7 +7,7 @@ d-i netcfg/choose_interface select auto
 
 
 d-i mirror/country string manual
-d-i mirror/http/hostname string %{source_url}
+d-i mirror/http/hostname string %{mirror_host}
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 d-i mirror/suite string jessie
@@ -44,7 +44,7 @@ d-i passwd/user-default-groups string audio cdrom video sudo adm
 d-i apt-setup/non-free boolean true
 d-i apt-setup/contrib boolean true
 d-i apt-setup/services-select multiselect security
-d-i apt-setup/security_host string %{security_source_url}
+d-i apt-setup/security_host string %{security_host}
 
 tasksel tasksel/first multiselect standard
 popularity-contest popularity-contest/participate boolean false
