--- a/manifests/centos-7-devenv/spec.yml
+++ b/manifests/centos-7-devenv/spec.yml
@@ -7,14 +7,14 @@ variables:
     "iso_url": "https://mirrors.ustc.edu.cn/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
     "iso_checksum": "111379a06402e1e445c6aeee9401d031",
     "iso_checksum_type": "md5",
-    "source_url": "https://mirrors.ustc.edu.cn/centos/7/os/x86_64/"
+    "mirror_host": "mirrors.ustc.edu.cn"
   }
   push: {
     "headless": "true",
     "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
     "iso_checksum": "111379a06402e1e445c6aeee9401d031",
     "iso_checksum_type": "md5",
-    "source_url": "http://mirrors.cat.pdx.edu/centos/7/os/x86_64/"
+    "mirror_host": "mirrors.kernel.org"
   }
 
 remote-shell:
@@ -39,5 +39,7 @@ remote-shell:
   - "scripts/cloud-init.sh"
   # Virtual Macine required
   - "scripts/vm-tools.sh"
+  # Fuck GFW
+  - "scripts/fuck_gfw.sh"
   # Cleanup
   - "scripts/cleanup.sh"
