--- a/manifests/debian-8-devenv/spec.yml
+++ b/manifests/debian-8-devenv/spec.yml
@@ -7,16 +7,16 @@ variables:
     "iso_url": "http://mirrors.ustc.edu.cn/debian-cd/8.2.0/amd64/iso-cd/debian-8.2.0-amd64-netinst.iso",
     "iso_checksum": "762eb3dfc22f85faf659001ebf270b4f",
     "iso_checksum_type": "md5",
-    "source_url": "mirrors.ustc.edu.cn",
-    "security_source_url": "mirrors.ustc.edu.cn/debian-security"
+    "mirror_host": "mirrors.ustc.edu.cn",
+    "security_host": "mirrors.ustc.edu.cn"
   }
   push: {
     "headless": "true",
     "iso_url": "http://mirrors.kernel.org/debian-cd/8.2.0/amd64/iso-cd/debian-8.2.0-amd64-netinst.iso",
     "iso_checksum": "762eb3dfc22f85faf659001ebf270b4f",
     "iso_checksum_type": "md5",
-    "source_url": "ftp.debian.org",
-    "security_source_url": "security.debian.org/debian-security"
+    "mirror_host": "mirror.hmc.edu",
+    "security_host": "security.debian.org"
   }
 
 remote-shell:
@@ -41,5 +41,7 @@ remote-shell:
   - "scripts/cloud-init.sh"
   # Virtual Macine required
   - "scripts/vm-tools.sh"
+  # Fuck GFW
+  - "scripts/fuck_gfw.sh"
   # Cleanup
   - "scripts/cleanup.sh"
