--- a/manifests/debian-8-devenv/spec.yml
+++ b/manifests/debian-8-devenv/spec.yml
@@ -22,9 +22,9 @@ variables:
 remote-shell:
   # System Base
   - [
+      "scripts/vagrant.sh",
       "scripts/packages.sh",
-      "scripts/docker.sh",
-      "scripts/vagrant.sh"
+      "scripts/docker.sh"
     ]
   # Languages
   - [
