--- a/manifests/centos-7-devenv/spec.yml
+++ b/manifests/centos-7-devenv/spec.yml
@@ -7,14 +7,20 @@ variables:
     "iso_url": "https://mirrors.ustc.edu.cn/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
     "iso_checksum": "111379a06402e1e445c6aeee9401d031",
     "iso_checksum_type": "md5",
-    "mirror_host": "mirrors.ustc.edu.cn"
+    "mirror_host": "mirrors.ustc.edu.cn",
+    "mirror_host.cn": "mirrors.ustc.edu.cn",
+    "security_host": "N/A",
+    "security_host.cn": "N/A"
   }
   push: {
     "headless": "true",
     "iso_url": "http://mirrors.kernel.org/centos/7/isos/x86_64/CentOS-7-x86_64-NetInstall-1503.iso",
     "iso_checksum": "111379a06402e1e445c6aeee9401d031",
     "iso_checksum_type": "md5",
-    "mirror_host": "mirrors.kernel.org"
+    "mirror_host": "mirrors.kernel.org",
+    "mirror_host.cn": "mirrors.ustc.edu.cn",
+    "security_host": "N/A",
+    "security_host.cn": "N/A"
   }
 
 remote-shell:
