* Generate for http dir.

--- a/manifests/centos-7-devenv/spec.yml
+++ b/manifests/centos-7-devenv/spec.yml
@@ -1,6 +1,9 @@
 version: 2.1.0
 atlas_user: "zealic"
 
+boot_command:
+  - "<tab> text ks=http://{{ .HTTPIP }}:{{ .HTTPPort }}/ks.cfg<enter>"
+
 variables:
   default: {
     "headless": "false",
