--- a/manifests/debian-8-devenv/spec.yml
+++ b/manifests/debian-8-devenv/spec.yml
@@ -1,6 +1,24 @@
 version: 2.1.0
 atlas_user: "zealic"
 
+boot_command:
+  - "<esc><wait>"
+  - "install <wait>"
+  - " preseed/url=http://{{ .HTTPIP }}:{{ .HTTPPort }}/ks.cfg <wait>"
+  - "debian-installer=en_US <wait>"
+  - "auto <wait>"
+  - "locale=en_US <wait>"
+  - "kbd-chooser/method=us <wait>"
+  - "keyboard-configuration/xkb-keymap=us <wait>"
+  - "netcfg/get_hostname=localhost <wait>"
+  - "netcfg/get_domain=localdomain <wait>"
+  - "fb=false <wait>"
+  - "debconf/frontend=noninteractive <wait>"
+  - "console-setup/ask_detect=false <wait>"
+  - "console-keymaps-at/keymap=us <wait>"
+  - "grub-installer/bootdev=/dev/vda <wait>"
+  - "<enter><wait>"
+
 variables:
   default: {
     "headless": "false",
