--- a/manifests/alpine-3-devenv/spec.yml
+++ b/manifests/alpine-3-devenv/spec.yml
@@ -4,15 +4,14 @@ atlas_user: "zealic"
 boot_command:
   - "root<enter><wait>"
   - "ifconfig eth0 up && udhcpc -i eth0<enter><wait5>"
-  - "wget http://{{ .HTTPIP }}:{{ .HTTPPort }}/ks.cfg<enter><wait>"
   - "wget http://{{ .HTTPIP }}:{{ .HTTPPort }}/install.sh<enter><wait>"
   - "source install.sh<enter><wait>"
 
 variables:
   default: {
     "headless": "false",
-    "iso_url": "http://wiki.alpinelinux.org/cgi-bin/dl.cgi/v3.3/releases/x86_64/alpine-extended-3.3.0-x86_64.iso",
-    "iso_checksum": "b95420d5eeba3ece5053cf2ed307b427321103e6",
+    "iso_url": "http://wiki.alpinelinux.org/cgi-bin/dl.cgi/v3.3/releases/x86_64/alpine-extended-3.3.1-x86_64.iso",
+    "iso_checksum": "a206b19ad6918b7aa40be554ef026237bcdfe118",
     "iso_checksum_type": "sha1",
     "mirror_host": "dl-4.alpinelinux.org",
     "mirror_host.cn": "dl-4.alpinelinux.org",
@@ -21,8 +20,8 @@ variables:
   }
   push: {
     "headless": "true",
-    "iso_url": "http://wiki.alpinelinux.org/cgi-bin/dl.cgi/v3.3/releases/x86_64/alpine-extended-3.3.0-x86_64.iso",
-    "iso_checksum": "b95420d5eeba3ece5053cf2ed307b427321103e6",
+    "iso_url": "http://wiki.alpinelinux.org/cgi-bin/dl.cgi/v3.3/releases/x86_64/alpine-extended-3.3.1-x86_64.iso",
+    "iso_checksum": "a206b19ad6918b7aa40be554ef026237bcdfe118",
     "iso_checksum_type": "sha1",
     "mirror_host": "dl-4.alpinelinux.org",
     "mirror_host.cn": "dl-4.alpinelinux.org",
@@ -48,8 +47,8 @@ remote-shell:
   - [
       "scripts/docker/general.sh"
     ]
-  # Cloud
-  - "scripts/cloud-init.sh"
+  # Cloud, alpine not supported
+  # - "scripts/cloud-init.sh"
   # Virtual Macine required
   - "scripts/vm-tools.sh"
   # Fuck GFW
