--- a/manifests/debian-8-devenv/spec.yml
+++ b/manifests/debian-8-devenv/spec.yml
@@ -35,7 +35,7 @@ variables:
     "iso_url": "http://mirrors.kernel.org/debian-cd/8.2.0/amd64/iso-cd/debian-8.2.0-amd64-netinst.iso",
     "iso_checksum": "762eb3dfc22f85faf659001ebf270b4f",
     "iso_checksum_type": "md5",
-    "mirror_host": "mirror.hmc.edu",
+    "mirror_host": "httpredir.debian.org",
     "mirror_host.cn": "mirrors.ustc.edu.cn",
     "security_host": "security.debian.org",
     "security_host.cn": "mirrors.ustc.edu.cn"
