* Improve nodejs mirrors config and centos kickstart.

--- a/manifests/centos-7-devenv/http/ks.cfg
+++ b/manifests/centos-7-devenv/http/ks.cfg
@@ -24,9 +24,9 @@ timezone UTC
 network --bootproto=dhcp
 
 # Partition
-bootloader --location=mbr --driveorder=sda --append="net.ifnames=0 biosdevname=0"
+bootloader --location=mbr --append="net.ifnames=0 biosdevname=0"
 zerombr
-part / --fstype=xfs --grow --size=1024
+part / --fstype=xfs --grow
 
 # First booting
 firstboot --disabled
