--- a/manifests/debian-8-devenv/spec.yml
+++ b/manifests/debian-8-devenv/spec.yml
@@ -22,8 +22,8 @@ boot_command:
 variables:
   default: {
     "headless": "false",
-    "iso_url": "http://mirrors.ustc.edu.cn/debian-cd/8.5.0/amd64/iso-cd/debian-8.5.0-amd64-netinst.iso",
-    "iso_checksum": "3e1b9029a0cf188730646c379d15073f",
+    "iso_url": "https://mirrors.tuna.tsinghua.edu.cn/debian-cd/8.6.0/amd64/iso-cd/debian-8.6.0-amd64-netinst.iso",
+    "iso_checksum": "e9f61bf327db6d8f7cee05a99f2353cc",
     "iso_checksum_type": "md5",
     "mirror_host": "mirrors.ustc.edu.cn",
     "mirror_host.cn": "mirrors.ustc.edu.cn",
@@ -32,8 +32,8 @@ variables:
   }
   push: {
     "headless": "true",
-    "iso_url": "http://mirrors.kernel.org/debian-cd/8.5.0/amd64/iso-cd/debian-8.5.0-amd64-netinst.iso",
-    "iso_checksum": "3e1b9029a0cf188730646c379d15073f",
+    "iso_url": "http://mirrors.kernel.org/debian-cd/8.6.0/amd64/iso-cd/debian-8.6.0-amd64-netinst.iso",
+    "iso_checksum": "e9f61bf327db6d8f7cee05a99f2353cc",
     "iso_checksum_type": "md5",
     "mirror_host": "httpredir.debian.org",
     "mirror_host.cn": "mirrors.ustc.edu.cn",
