--- a/manifests/debian-9/http/ks.cfg
+++ b/manifests/debian-9/http/ks.cfg
@@ -1,4 +1,5 @@
 d-i debian-installer/locale select en_US.UTF-8
+d-i debian-installer/add-kernel-opts string "biosdevname=0 net.ifnames=0"
 d-i localechooser/preferred-locale select en_US.UTF-8
 d-i keyboard-configuration/xkb-keymap select us
 
@@ -10,12 +11,12 @@ d-i mirror/country string manual
 d-i mirror/http/hostname string %{mirror_host}
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
-d-i mirror/suite string jessie
+d-i mirror/suite string stretch
 
 
 d-i clock-setup/utc boolean true
 d-i time/zone string UTC
-d-i clock-setup/ntp boolean false
+d-i clock-setup/ntp boolean true
 
 
 d-i partman-auto/method string regular
