+ Added nfs-common.

--- a/manifests/debian-9/http/ks.cfg
+++ b/manifests/debian-9/http/ks.cfg
@@ -1,5 +1,5 @@
 d-i debian-installer/locale select en_US.UTF-8
-d-i debian-installer/add-kernel-opts string "biosdevname=0 net.ifnames=0"
+d-i debian-installer/add-kernel-opts string biosdevname=0 net.ifnames=0
 d-i localechooser/preferred-locale select en_US.UTF-8
 d-i keyboard-configuration/xkb-keymap select us
 
